# auto-metrics

./: README.md  analyse.html  config-enhanced.yaml  config.yaml  fix_metadata.py  index.html  main.js  pyproject.toml  run-all.sh
article-text/: Application of a comprehensive model based on CT radiomics and clinical features for postoperative recurrence risk prediction in non-small cell lung cancer.txt  CT-based whole lung radiomics nomogram: a tool for identifying the risk of cardiovascular disease in patients with chronic obstructive pulmonary disease.txt  Comparing deep learning and handcrafted radiomics to predict chemoradiotherapy response for locally advanced cervical cancer using pretreatment MRI.txt  Cystic renal mass screening: machine-learning-based radiomics on unenhanced computed tomography.txt  Deep learning-radiomics integrated noninvasive detection of epidermal growth factor receptor mutations in non-small cell lung cancer patients.txt  Development of a combined radiomics and CT feature-based model for differentiating malignant from benign subcentimeter solid pulmonary nodules.txt  Intratumoral and peritumoral CT radiomics in predicting prognosis in patients with chondrosarcoma: a multicenter study.txt  Machine learning model to preoperatively predict T2_T3 staging of laryngeal and hypopharyngeal cancer based on the CT radiomic signature.txt  Machine learning-based radiomics strategy for prediction of acquired EGFR T790M mutation following treatment with EGFR-TKI in NSCLC.txt  Novel model integrating CT-based image markers with genetic markers for discriminating radiation pneumonitis in patients with unresectable stage III NSCLC receiving RT.txt  Predicting occult lymph node metastasis in solid-predominantly invasive lung adenocarcinoma across multiple centers using radiomics-deep learning fusion model.txt  Prediction of SBRT response in liver cancer by combining original and delta cone-beam CT radiomics: a pilot study.txt  Preoperative prediction of early recurrence in resectable pancreatic cancer integrating clinical, radiologic, and CT radiomics features.txt
ratings/: A radiomics nomogram based on MSCT and clinical factors can stratify fibrosis in inflammatory bowel disease.json  (+15 more)
(+1646 files in other folders)
