[project]
name = "automatic-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "beautifulsoup4>=4.13.3",
    "datasets>=3.5.1",
    "google-genai>=1.8.0",
    "jsonref>=1.1.0",
    "ollama>=0.4.8",
    "outlines>=0.2.3",
    "pydantic>=2.11.1",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "selenium>=4.30.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.51.3",
]
